@@ -169,7 +169,7 @@
 
     <!-- Strings for the ShowcaseView tutorial. -->
     <string name="tutorial_1_title">qavan! (Ich grüße dir!)</string>
-    <string name="tutorial_1_msg">Dieses Tutorial wird dich kurz durch den boQwI\' leiten.\n\n* neueste Änderungen *\n2014-11-12: geometry and card game terms.\n2014-10-23: TTS integration.</string>
+    <string name="tutorial_1_msg">Dieses Tutorial wird dich kurz durch den boQwI\' leiten.\n\n* neueste Änderungen *\n2014-11-16: new vocab from qepHom\'a\' 2014.\n2014-10-23: Text-To-Speech integration.</string>
     <string name="tutorial_2_title">Suche</string>
     <string name="tutorial_2_msg">Durchsuche die Datenbank auf Englisch oder Klingonisch.</string>
     <string name="tutorial_3_title">Ressourcen</string>
@@ -179,7 +179,7 @@
     <string name="tutorial_5_title">Andere Funktionen</string>
     <string name="tutorial_5_msg">Benutze den Menü-Button für weitere Funktionen.</string>
     <string name="tutorial_6_title">Noch mehr Funktionen</string>
-    <string name="tutorial_6_msg">Willst du hören, wie sich ein Wort anhört? Nutze den "Vorlese"-Button. (benötigt Klingonische TTS engine.)\n\nLiset du einen langen Text auf Klingonisch (wie Hamlet)? Aktiviere den Schwimm-Modus, und boQwI\' schwebt über deinen Browser, dein Emailprogramm oder E-Book-Reader.</string>
+    <string name="tutorial_6_msg">Willst du hören, wie sich ein Wort anhört? Nutze den "Vorlese"-Button. (benötigt Klingonische Text-To-Speech engine.)\n\nLiset du einen langen Text auf Klingonisch (wie Hamlet)? Aktiviere den Schwimm-Modus, und boQwI\' schwebt über deinen Browser, dein Emailprogramm oder E-Book-Reader.</string>
     <string name="tutorial_7_title">Qapla\'! (Erfolg!)</string>
     <string name="tutorial_7_msg">Fortgeschrittene Nutzer finden weitere Optionen im Einstellungs-Menü.</string>
 </resources>
